# prospector-mcp

./: .gitignore  .prospector.yaml  .pydocstyle  README.md  SPECS.md  pyproject.toml
src/prospector_mcp/: __init__.py  config.py  runner.py  security.py  server.py
src/prospector_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config.py  test_dogfooding.py  test_overrides.py  test_runner.py  test_security.py
