[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prospector-mcp"
version = "0.3.0"
description = "MCP server exposing Prospector static analysis via its native Python API"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    {name = "OpenCode Agent", email = "opencode@garambrogne.net"},
    {name = "Mathieu Lecarme", email = "mathieu@garambrogne.net"}
]
keywords = ["mcp", "prospector", "static-analysis", "linter"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "fastmcp>=0.4.0",
    "prospector[with_everything]>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
prospector-mcp = "prospector_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true

[tool.vulture]
ignore_decorators = ["@mcp\\.tool"]


[tool.pydocstyle]
ignore = ["D213", "D406", "D407"]
